# AureStream

./: .env  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  config.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  quickstart.sh  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-desktop.yml  build-release.yml  rust.yml
crates/aurestream-plugin-lifecycle/: Cargo.toml
crates/aurestream-plugin-lifecycle/src/: commands.rs  engine_commands.rs  lib.rs  linux.rs  macos.rs  macos_watchdog.rs  monitor.rs  process.rs  readiness.rs  shutdown.rs  windows.rs
crates/aurestream-plugin-privilege/: Cargo.toml  build.rs
crates/aurestream-plugin-privilege/linux-helper/: 49-aurestream.rules  com.root.aurestream.policy
crates/aurestream-plugin-privilege/macos-helper/: Info.plist  Launchd.plist  README.md  com.root.aurestream.helper.plist
crates/aurestream-plugin-privilege/macos-helper/Sources/: main.m
crates/aurestream-plugin-privilege/src/: lib.rs  linux.rs  windows.rs
crates/aurestream-plugin-privilege/src/macos/: helper.m  helper.rs  mod.rs
crates/aurestream-plugin-proxy/: Cargo.toml
crates/aurestream-plugin-proxy/src/: bypass.rs  lib.rs  macos.rs  main.rs  sysproxy.rs  windows.rs
crates/aurestream-plugin-proxy/tests/: integration.rs
crates/aurestream-plugin-tun/: Cargo.toml
crates/aurestream-plugin-tun/src/: lib.rs  main.rs  scm.rs
crates/aurestream-plugin-tun/src/linux/: mod.rs
crates/aurestream-plugin-tun/src/macos/: dns_watcher.rs  mod.rs
docs/: DESIGN.md  FEATURE_AUTO_SETTING_PROXY.md  FEATURE_BUILTIN_CLASH_MERGE.md  FEATURE_NODE_ONLY_SELECTION.md  MACOS_GATEKEEPER.md  MIHOMO_SAFE_PATH_WINDOWS.md  MIHOMO_SIDECAR.md  MOBILE_UI.md  PLATFORM_TRAY_MODE.md  README.md  SPEC.md  TODO.md  api-reference.md  architecture.md  backend-architecture.md  build-and-deploy.md  code-review-2026-06-03.md  frontend-architecture.md  index.md  introduction.md  release-v0.1.0.md  state-management.md  subscription-platform-selector.md  troubleshooting.md  ui-design-system.md  wiki-config-merger.md  技术方案与功能设计文档.md
docs/design/: typography-and-colors.md
docs/plan/: architecture-fixes-singbox-only.md  aurestream-vs-onebox-gap-analysis.md  home-routing-and-guards.md  multi-subscription-state.md
docs/refactor/: implementation_plan.md  refactor.md  route_design.md  subscription_parse_plan.md  technical_design.md
lang/: en.json  zh.json
scripts/: build-helper.sh  build-tun-service.ts  build.ps1  download-binaries.ts  download-mihomo.sh  generate-updater-manifest.js  ldd-static-safe.sh  post-sign-macos-bundle.sh  prebundle.ts  sign-helper.sh  sign-macos-bundle.sh  sync-smjobbless-reqs.ts  sync-templates.ts  test-tun.ts  uninstall-macos-helper.sh  updater.js
src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.privileged-helper.plist  build.rs  cache.db  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/helper/: Info.plist  Launchd.plist  README.md
src-tauri/helper/Sources/: main.m
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_drop_latency_history.sql  003_smart_routing.sql
src-tauri/resources/linux/: aurestream-tun-helper  com.root.aurestream.policy  deb-postinst.sh  deb-postrm.sh
src-tauri/src/: bootstrap.rs  config.rs  db.rs  error.rs  lib.rs  macos_theme.m  main.rs  state.rs  utils.rs
src-tauri/src/adapter/: mod.rs
src-tauri/src/adapter/mihomo/: adapter.rs  api_client.rs  config_gen.rs  constants.rs  mod.rs  probe.rs
src-tauri/src/app/: database.rs  events.rs  mod.rs  plugins.rs  setup.rs  single_instance.rs  state.rs  tray.rs  tray_test.rs
src-tauri/src/commands/: builtin_config.rs  config_fetch.rs  dns.rs  geox.rs  mihomo_constants.rs  mihomo_kernel.rs  mod.rs  network.rs  oauth.rs  prestart.rs  provider.rs  proxy.rs  settings.rs  shell.rs  smart_route.rs  subscription.rs  system_proxy.rs  theme.rs  whitelist.rs
src-tauri/src/core/: commands.rs  config_check.rs  engine_commands.rs  linux.rs  log.rs  macos.rs  macos_watchdog.rs  mod.rs  monitor.rs  perf.rs  ports.rs  process.rs  readiness.rs  shutdown.rs  windows.rs
src-tauri/src/engine/: config_check.rs  helper.rs  log.rs  mod.rs  monitor.rs  ports.rs  process.rs  readiness.rs  shutdown.rs  state_machine.rs
src-tauri/src/engine/common/: bypass.rs  helper.rs  mod.rs  readiness.rs  shutdown.rs  sysproxy.rs
src-tauri/src/engine/linux/: mod.rs
src-tauri/src/engine/macos/: dns_watcher.rs  helper.m  helper.rs  mod.rs  watchdog.rs
src-tauri/src/engine/windows/: mod.rs  watchdog.rs
src-tauri/src/ipc/: connection.rs  mod.rs  network_info.rs  node.rs  settings.rs  subscription.rs  tray.rs
src-tauri/src/models/: dto.rs  endpoint.rs  event.rs  mod.rs  proxy_config.rs  raw_proxy.rs  runtime.rs  state.rs  subscription.rs  telemetry.rs
src-tauri/src/network/: geox.rs  mod.rs
src-tauri/src/network/system_proxy/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/runtime/: core_manager.rs  event_bus.rs  mihomo_sidecar.rs  mod.rs  proxy_manager.rs  session_manager.rs  state_machine.rs
src-tauri/src/storage/: app_state_repo.rs  database.rs  endpoint_repo.rs  mod.rs  subscription_repo.rs
src-tauri/src/subscription/: cache.rs  deduplicator.rs  fetcher.rs  mod.rs  normalizer.rs  registry.rs
src-tauri/src/subscription/format/: clash.rs  mod.rs  v2ray.rs
src-tauri/src/subscription/protocol/: http_proxy.rs  hysteria2.rs  mod.rs  parser_common.rs  shadowsocks.rs  socks5.rs  trojan.rs  tuic.rs  vless.rs  vmess.rs
src-tauri/sysproxy-rs/: .gitignore  Cargo.toml  Makefile  README.md
src-tauri/sysproxy-rs/src/: lib.rs  linux.rs  main.rs  utils.rs
src-tauri/sysproxy-rs/tests/: integration.rs
src-tauri/tun-service/: Cargo.toml
src-tauri/tun-service/src/: dns.rs  lib.rs  service.rs
src/__tests__/: store.test.ts
src/action/: db.ts  platform-auth.ts
src/api/: auth.ts  client.ts  subscriptions.ts
src/components/: AuthLayout.tsx  CheckoutPage.tsx  (+15 more)
(+194 files in other folders)
