[package]
name = "aurestream"
version = "0.2.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "aurestream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"


[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
lazy_static = "1.5.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1.0"
libc = "0.2"
webbrowser = "1.0.4"
url = "2"
sha2 = "0.10"
aurestream-plugin-proxy = { path = "../crates/aurestream-plugin-proxy" }
aurestream-plugin-privilege = { path = "../crates/aurestream-plugin-privilege" }
aurestream-plugin-tun = { path = "../crates/aurestream-plugin-tun" }
tauri-plugin-deep-link = "2"
onebox_lifecycle = { git = "https://github.com/OneOhCloud/onebox-lifecycle", tag = "v0.1.1" }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winbase"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
