[package]
name = "aurestream-plugin-lifecycle"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
flate2 = "1"
aurestream-plugin-proxy = { path = "../aurestream-plugin-proxy" }
aurestream-plugin-tun = { path = "../aurestream-plugin-tun" }
aurestream-plugin-privilege = { path = "../aurestream-plugin-privilege" }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde_json = "1"
libc = "0.2"
lazy_static = "1.5.0"
