[package]
name = "aurestream-plugin-privilege"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
libc = "0.2"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
cc = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
