[package]
name = "aurestream-plugin-tun"
version = "0.2.0"
edition = "2021"

[lib]
name = "aurestream_plugin_tun"
path = "src/lib.rs"

[[bin]]
name = "tun-service"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
aurestream-plugin-privilege = { path = "../aurestream-plugin-privilege" }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = "0.10"
log = "0.4"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Services",
    "Win32_System_Registry",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_IO",
] }

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.7"
core-foundation = "0.9"
log = "0.4"

[target.'cfg(target_os = "windows")'.dev-dependencies]
tempfile = "3"
