[package]
name = "sysproxy-rs"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "A cross-platform library for getting/setting system proxy. Supports Windows, macOS and Linux."

[lib]
name = "sysproxy_rs"
path = "src/lib.rs"

[[bin]]
name = "sysproxy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
url = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Networking_WinInet",
    "Win32_NetworkManagement_Rras",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Foundation",
] }

[dev-dependencies]
serial_test = "3"
